# Patrones-Datos-II

Patrones/: CMakeLists.txt  main.cpp
Patrones/EventListener/: Approved.cpp  Approved.h  CheckedStudents.h  Grades.cpp  Grades.h  Statistics.cpp  Statistics.h  Subscriber.h
Patrones/EventManager/: EvManager.h
Patrones/Facade/LoggingManager/: LoggingManager.cpp  LoggingManager.h
Patrones/Facade/LoggingManager/Register/: Register.cpp  Register.h
Patrones/Lists/: List.h  ListInt.cpp  ListInt.h  ListStr.cpp  ListStr.h  ListSubs.cpp  ListSubs.h  Node.h
Patrones/Observer/EventListener/: CheckedStudents.cpp  Grades.cpp  Grades.h  Statistics.h  Subscriber.h
Patrones/Observer/EventManager/: EvManager.cpp  EvManager.h
Patrones/Observer/Lists/: List.cpp  List.h  Node.h
